# mini-red

./: .gitignore  README.md  meson.build  minired.mk
include/: components.hpp  mqtt.hpp
include/components/: ble_component.hpp  io.hpp  javascript.hpp  math.hpp  mqtt_component.hpp  setter.hpp  string.hpp
public/: defn.js  index.css  index.html  index2.html  reactablejs.js
src/: dev.cpp  mqtt.cpp  my_executable.cpp  webserver.cpp
src/components/: ble_component.cpp  component.cpp  io.cpp  javascript.cpp  math.cpp  mqtt_component.cpp  setter.cpp  string.cpp
